css/src/style.scss
@import "_colors.scss";

body, html {
  min-height: 100%;
  overflow-x: hidden;
  font-size: 14px;
}

p:empty {
  display: none;
}

.boxshadow, .thumb64 {
  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.05);
}

.boxshadow, .cases-menu a:hover, .cases-section a.seemore, .thumb64 {
  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.05);
  -moz-box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.05);
  -webkit-box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.05);
}

.content-box h4, .footer .footer-col .footer-title, .message-box h4, h2.widgettitle {
  text-transform: uppercase;
}

#clientsCarousel .row, .cases-section, .share-buttons, .youtube p, p.gallery-caption, table.clean tr, table.shop_attributes tr {
  text-align: center;
}

.carousel-container .carousel-item, .text-input {
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
}

.content-box .read-more:hover i {
  text-decoration: none;
}

.share-buttons, nav ol, nav ul {
  list-style: none;
}

.share-buttons li:before {
  content: '' !important;
}

.navigation, .posts-list, .social-icons > ul {
  list-style-type: none;
}

.contact-social a {
  img {
    display: inline;
  }
  a {
    margin-right: 10px;
  }
}

#menu-home-menu, #stt-navbar-collapse {
  -webkit-transition: none !important;
  transition: none !important;
}

.map-overlay {
  background: 0 0;
  position: relative;
  width: 100%;
  height: 450px;
  top: 450px;
  margin-top: -450px;
}

.share-buttons {
  img {
    display: inline !important;
  }

  a:hover {
    filter: drop-shadow(0 0 5px #888);
    -webkit-filter: drop-shadow(0 0 5px #888);
  }

  li {
    display: inline;
    margin: 2px;
  }
}

#clientsCarousel img {
  max-width: 12%;
  max-height: 201px;
  display: inline-block;
}

.footer-logo {
  width: 100%;
  height: auto;
  max-width: 171px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 768px) {
  .footer-logo-col {
    display: none !important;
  }
}
p.gallery-caption {
  margin-top: -35px !important;
  font-size: 14px !important;
}

/* Titles */
h1, h2, h3, h4, h5, h6 {
  font-family: "Fira Sans", Helvetica, Arial, sans-serif !important;
  margin: 0 0 20px;
  color: #3a3a3a;
}

h1 {
  font-size: 28px;
}
h2 {
  font-size: 22px;
}
h3 {
  font-size: 18px;
}
h4 {
  font-size: 16px;
}
h5 {
  font-size: 15px;
}
h6 {
  font-size: 14px;
}

h1.page-title {
  margin: 0 10px 10px 0;
  color: #fff;
  float: none;
  color: #fff;
  font-weight: 100;
  margin-top: 25px;
  margin-bottom: 25px;
}

.top-title-wrapper > h1 {
  line-height: 20px;
}
h1 a, h1 a:focus, h1 a:hover, h2 a, h2 a:focus, h2 a:hover {
  color: #fff;
}
.blog-post-body h3:first-child, .blog-post-body h4:first-child {
  margin-top: 0 !important;
}
body .h4-section-title {
  margin-bottom: 10px;
  font-size: 18px;
  color: #4b4b4b;
  font-weight: 600;
  line-height: 28px;
}
h2.widgettitle {
  color: #4b4b4b;
  font-size: 15px;
  font-weight: 500;
}
.h4-body-title {
  font-size: 18px;
  color: #4b4b4b;
  font-weight: 400;
}

.textwidget {
  color: #d4d4d4;
  p {
    margin-bottom: 0 !important;
  }
  a {
    color: #d4d4d4;
  }
  a[href^=mailto] {
    color: #428bca;
  }
  a:hover {
    color: $color-stt;
  }
  [class*='col-'] {
    padding-left: 0px !important;
  }
}

.recent-post {
  margin-bottom: 4px;
  border-bottom: 1px solid #888;
}

.recent-post:last-child {
  margin-bottom: 4px;
  border-bottom: 0;
}

.recent-posts a {
  color: #fff;
  font-weight: 100;
  padding-bottom: 2px;
}

.recent-posts a:hover {
  color: $color-stt;
}

.fa {
  color: #aaa !important;
  margin-right: 4px !important;
}

.thumb64 {
  height: 64px;
  width: 64px;
  display: inline-block;
  margin: 2px;
  border-radius: 5px;
  background-position: center center;
  background-size: cover;
  filter: grayscale(50%);
  -webkit-filter: grayscale(50%);
  -moz-filter: grayscale(50%);
  -o-filter: grayscale(50%);
  -ms-filter: grayscale(50%);
}

.youtube, body .syntaxhighlighter {
  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.05);
  -moz-box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.05);
  -webkit-box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.05);
}

.thumb64:hover {
  filter: grayscale(0);
  -webkit-filter: grayscale(0);
  -moz-filter: grayscale(0);
  -o-filter: grayscale(0);
  -ms-filter: grayscale(0);
}

.youtube {
  max-width: 560px;
  margin: 0 auto 15px;
  display: block;
  border-radius: 7px;
}

.youtube p {
  font-size: 14px;
  padding-bottom: 5px;
}

iframe {
  border: 0;
}

/* Galleries */
.gallery {
  width: 100%;
  margin: 15px auto 35px;
  display: inline-block;
}

.blueimp-gallery > .indicator > li {
  width: 64px !important;
  height: 64px !important;
  border-radius: 5px !important;
  background-size: cover !important;
}

.blueimp-gallery > .indicator > :not(.active) {
  filter: grayscale(100%);
  -webkit-filter: grayscale(100%);
  -moz-filter: grayscale(100%);
  -o-filter: grayscale(100%);
  -ms-filter: grayscale(100%);
}

.blueimp-gallery > .indicator > li:hover:not(.active) {
  filter: grayscale(30%);
  -webkit-filter: grayscale(30%);
  -moz-filter: grayscale(30%);
  -o-filter: grayscale(30%);
  -ms-filter: grayscale(30%);
  opacity: 0.85 !important;
}

@media (max-width: 768px) {
  .blueimp-gallery > .indicator > li {
    display: none !important;
  }
}
.carousel-caption h1, .carousel-caption h2 {
  color: #fff !important;
}

/* Syntax highlighting */
body .syntaxhighlighter {
  border-radius: 4px;
  padding: 7px;
  width: 80% !important;
  margin-left: auto !important;
  margin-right: auto !important;
}

@media screen and (max-width: 992px) {
  body .syntaxhighlighter {
    padding: 5px;
    width: 100% !important;
  }
}

img.rounded, .woocommerce div.product div.images img, .woocommerce ul.products li.product a img {
  max-width: 95%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
  border: 0 solid transparent;
  border-radius: 7px;
}
/* ... */

